# auto-lending-bot

./: .dockerignore  .env.bitfinex.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: auth-roadmap.md  bitfinex-dry-run-workflow.md  bitfinex-smoke-checklist.md  pre-live-safety-checklist.md  profile-readiness.md
scripts/: dev.ps1
src/auto_lending_bot/: __init__.py  cli.py  config.py  main.py  profiles.py  reports.py  safety.py  settings_registry.py  settings_security.py  settings_snapshot.py
src/auto_lending_bot/api/: actions.py  app.py  dashboard.py  routes.py
src/auto_lending_bot/bot/: factory.py  run_steps.py  runner.py
src/auto_lending_bot/domain/: __init__.py  models.py  services.py  strategy.py
src/auto_lending_bot/integrations/: bitfinex.py  client.py  credentials.py  errors.py  exchange.py  factory.py  http.py  mock_exchange.py  poloniex.py
src/auto_lending_bot/market/: __init__.py  analysis_recorder.py  recorder.py
src/auto_lending_bot/notifications/: notifier.py
src/auto_lending_bot/operations/: exchange_actions.py  (+2 more)
tests/: test_api.py  test_bitfinex.py  test_cli.py  test_config.py  test_factory.py  test_http.py  test_mock_exchange.py  test_notifier.py  test_operations.py  test_poloniex.py  test_reports.py  test_repository.py  test_run_steps.py  test_runner.py  test_safety.py  test_services.py  test_settings_security.py  test_strategy.py  test_strategy_config.py  test_transfers.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: index.css  main.tsx
(+23 files in other folders)
