[project]
name = "auto-lending-bot"
version = "0.1.0"
description = "A Python starter project for an auto lending bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
]

[project.scripts]
auto-lending-bot = "auto_lending_bot.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
